// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h2 + pre 1`] = `
<div>
  
    
  <div
    class="h2-section"
  >
    <h2>
      heading
    </h2>
    <div
      class="body h3-section-list"
      data-js-h3-section-list=""
    >
      
    
      <div
        class="h3-section language-markdown"
      >
        <div
          class="body language-markdown"
        >
          <pre
            class="language-markdown"
          >
            (code)
          </pre>
          
  
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`h3 with class 1`] = `
<div>
  
    
  <div
    class="h2-section -hello"
  >
    <div
      class="body h3-section-list -hello"
      data-js-h3-section-list=""
    >
      <div
        class="h3-section -hello"
      >
        <h3
          class="-hello"
        >
          install
        </h3>
        <div
          class="body -hello"
        >
          
    
          <p>
            (install)
          </p>
          
  
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`multiple h2s 1`] = `
<div>
  
    
  <div
    class="h2-section"
  >
    <h2>
      multiple h2
    </h2>
    <div
      class="body h3-section-list"
      data-js-h3-section-list=""
    />
  </div>
  <div
    class="h2-section"
  >
    <h2>
      

    
    </h2>
    <div
      class="body h3-section-list"
      data-js-h3-section-list=""
    >
      <div
        class="h3-section"
      >
        <h3>
          install
        </h3>
        <div
          class="body"
        >
          
    
          <p>
            (install)
          </p>
          

    
        </div>
      </div>
      <div
        class="h3-section"
      >
        <h3>
          usage
        </h3>
        <div
          class="body"
        >
          
    
          <p>
            (usage)
          </p>
          

    
        </div>
      </div>
    </div>
  </div>
  <div
    class="h2-section"
  >
    <h2>
      getting started
    </h2>
    <div
      class="body h3-section-list"
      data-js-h3-section-list=""
    />
  </div>
  <div
    class="h2-section"
  >
    <h2>
      

    
    </h2>
    <div
      class="body h3-section-list"
      data-js-h3-section-list=""
    >
      <div
        class="h3-section"
      >
        <h3>
          first
        </h3>
        <div
          class="body"
        >
          
    
          <p>
            (first)
          </p>
          

    
        </div>
      </div>
      <div
        class="h3-section"
      >
        <h3>
          second
        </h3>
        <div
          class="body"
        >
          
    
          <p>
            (second)
          </p>
          
  
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`simple usage 1`] = `
<div>
  
    
  <div
    class="h2-section"
  >
    <h2>
      simple usage
    </h2>
    <div
      class="body h3-section-list"
      data-js-h3-section-list=""
    />
  </div>
  <div
    class="h2-section"
  >
    <h2>
      

    
    </h2>
    <div
      class="body h3-section-list"
      data-js-h3-section-list=""
    >
      <div
        class="h3-section"
      >
        <h3>
          install
        </h3>
        <div
          class="body"
        >
          
    
          <p>
            (install)
          </p>
          

    
        </div>
      </div>
      <div
        class="h3-section"
      >
        <h3>
          usage
        </h3>
        <div
          class="body"
        >
          
    
          <p>
            (usage)
          </p>
          
  
        </div>
      </div>
    </div>
  </div>
</div>
`;
